Fixed navbar resizing for toggle to avoid overlapping the page content in _Layout.cshtml and site.css

--- a/src/wwwroot/css/site.css
+++ b/src/wwwroot/css/site.css
@@ -8,6 +8,7 @@
 body {
     height: 100%;
     margin: 0;
+    padding-top: 90px;
     padding-bottom: 50px;
 }
 
